Add Menu exapmle migration. Its good:)